# ArchiTXT

./: .buildinfo  .dockerignore  .gitattributes  .gitignore  .mailmap  .pre-commit-config.yaml  AUTHORS.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  architecture.html  codemeta.json  docker-compose.yml  examples.html  export_data.html  exporters.html  fundamentals.html  genindex.html  getting_started.html  importers.html  index.html  installation.html  integrations.html  load_data.html  metagrammar.g4  objects.inv  py-modindex.html  pyproject.toml  robots.txt  search.html  searchindex.js  sitemap.xml  transform_data.html  transformers.html
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codemeta.yml  docker-build.yml  docs-build.yml  hadolint.yml  python-build.yml  python-test.yml  ruff.yml
_api_reference/: architxt.bucket.html  architxt.bucket.zodb.html  architxt.cli.export.html  architxt.cli.html  architxt.cli.loader.html  architxt.cli.utils.html  architxt.database.export.cypher.html  architxt.database.export.graph.html  architxt.database.export.html  architxt.database.export.sql.html  architxt.database.html  architxt.database.loader.cypher.html  architxt.database.loader.documents.html  architxt.database.loader.html  architxt.database.loader.sql.html  architxt.forest.html  architxt.generator.html  architxt.grammar.html  architxt.grammar.metagrammarLexer.html  architxt.grammar.metagrammarListener.html  architxt.grammar.metagrammarParser.html  architxt.html  architxt.inspector.html  architxt.labelling.html  architxt.llm.html  architxt.metrics.html  architxt.nlp.brat.html  architxt.nlp.contrib.flair.html  architxt.nlp.contrib.html  architxt.nlp.contrib.scispacy.html  architxt.nlp.contrib.spacy.html  architxt.nlp.entity_extractor.html  architxt.nlp.entity_resolver.html  architxt.nlp.html  architxt.nlp.model.html  architxt.nlp.parser.benepar.html  architxt.nlp.parser.corenlp.html  architxt.nlp.parser.html  architxt.nlp.utils.html  architxt.schema.html  (+22 more)
_modules/: index.html
_modules/architxt/: bucket.html  cli.html  database.html  forest.html  generator.html  inspector.html  labelling.html  llm.html  metrics.html  nlp.html  schema.html  similarity.html  tree.html  ui.html  utils.html
_sources/: examples.rst  export_data.rst  exporters.rst  getting_started.rst  index.rst  installation.rst  integrations.rst  load_data.rst  transform_data.rst  transformers.rst
_sources/_api_reference/: architxt.bucket.rst  architxt.bucket.zodb.rst  architxt.cli.export.rst  architxt.cli.loader.rst  architxt.cli.rst  architxt.cli.utils.rst  architxt.database.export.cypher.rst  architxt.database.export.graph.rst  architxt.database.export.rst  architxt.database.export.sql.rst  architxt.database.loader.cypher.rst  architxt.database.loader.documents.rst  architxt.database.loader.rst  architxt.database.loader.sql.rst  architxt.database.rst  architxt.forest.rst  architxt.generator.rst  architxt.grammar.metagrammarLexer.rst  architxt.grammar.metagrammarListener.rst  architxt.grammar.metagrammarParser.rst  architxt.grammar.rst  architxt.inspector.rst  architxt.metrics.rst  architxt.nlp.brat.rst  architxt.nlp.entity_extractor.rst  architxt.nlp.entity_resolver.rst  architxt.nlp.model.rst  architxt.nlp.parser.benepar.rst  architxt.nlp.parser.corenlp.rst  architxt.nlp.parser.rst  architxt.nlp.rst  architxt.nlp.utils.rst  architxt.rst  architxt.schema.rst  architxt.similarity.rst  architxt.simplification.llm.rst  architxt.simplification.rst  architxt.simplification.simple_rewrite.rst  architxt.simplification.tree_rewriting.operations.collections.rst  architxt.simplification.tree_rewriting.operations.groups.rst  (+9 more)
_sources/examples/: corpus_exploration.ipynb  corpus_exploration.rst  database_integration.ipynb
_sources/exporters/: cypher.rst
_sources/getting_started/: cli.rst  corpus.rst  ui.rst
_sources/importers/: cypher.rst  document.rst  text.rst
_sources/integrations/: mlflow.rst
_sources/load_data/: text.rst
_sources/transformers/: simplify.rst
_sphinx_design_static/: sphinx-design.min.css
_static/: basic.css  copybutton.css  favicon.xcf  graphviz.css  logo_h.xcf  logo_v.xcf  mystnb.11b39860a7a0cbfd473a3ad8a317855267ff0bd372690045ca344a6b62be495e.css  pygments.css  sbt-webpack-macros.html  social.xcf  webpack-macros.html
_static/css/: sphinx-toolbox.css
_static/styles/: pydata-sphinx-theme.css  sphinx-book-theme.css  theme.css
architxt/: __init__.py  algo.py  cli.py  db.py  forest.py  inspector.py  instance_generator.py  llm.py  metrics.py  model.py  nlp.py  operations.py  schema.py  similarity.py  test_model.py  test_operations.py  test_similarity.py  tree.py  utils.py
architxt/bucket/: __init__.py  zodb.py
architxt/cli/: __init__.py  export.py  loader.py  utils.py
architxt/database/: __init__.py  read_graph.py
architxt/generator/: __init__.py
architxt/grammar/: metagrammarLexer.interp  metagrammarLexer.py
architxt/labelling/: __init__.py
architxt/nlp/: __init__.py  brat.py  entity_extractor.py  entity_resolver.py  model.py  parser.py  utils.py
architxt/simplification/: llm.py  (+1 more)
benchmarks/: cli.py
corenlp/: Dockerfile
dev/: maccrobat.py
docs/: .gitignore  Makefile  conf.py  examples.rst  exporters.rst  fundamentals.rst  getting_started.rst  importers.rst  index.rst  installation.rst  robot.txt
examples/: corpus_exploration.html  database_integration.html
exporters/: cypher.html  sql.html
getting_started/: cli.html  corpus.html  ui.html
importers/: cypher.html  document.html  sql.html  text.html
integrations/: mlflow.html
load_data/: document.html  text.html
tal_db/: algo.py  instance_generator.py  main.py  nlp.py  operations.py  similarity.py  test_model.py  test_operations.py  test_similarity.py  tree.py
test/: strategies.py  test_db.py  test_model.py  test_operations.py  test_similarity.py  test_strategies.py
tests/: test_forest.py  test_model.py  test_read_database.py  test_schema.py  test_strategies.py  test_tree.py
transform_data/: simplify.html
transformers/: simplification.html  simplify.html
(+103 files in other folders)
